-added daemon-test project to daemonthread test case.this threads execute 150 jobs. -fixed thread size checking problem -fixed uid name cheking problem

--- a/agent/Daemon-test/.cproject
+++ b/agent/Daemon-test/.cproject
@@ -40,6 +40,7 @@
 							<tool id="cdt.managedbuild.tool.gnu.cpp.linker.exe.debug.1956379081" name="GCC C++ Linker" superClass="cdt.managedbuild.tool.gnu.cpp.linker.exe.debug">
 								<option id="gnu.cpp.link.option.libs.832358867" name="Libraries (-l)" superClass="gnu.cpp.link.option.libs" valueType="libs">
 									<listOptionValue builtIn="false" value="qpidmessaging"/>
+									<listOptionValue builtIn="false" value="qpidtypes"/>
 									<listOptionValue builtIn="false" value="pthread"/>
 									<listOptionValue builtIn="false" value="boost_thread"/>
 									<listOptionValue builtIn="false" value="json_linux-gcc-4.7_libmt"/>
