fixed - CWD and user messages duplicate error. KSKSAGENT-53
Former-commit-id: b35a1415d0cb47be66aee477a60abc04dc268236

--- a/agent/KiskisAgent/.cproject
+++ b/agent/KiskisAgent/.cproject
@@ -145,5 +145,7 @@
 			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId="org.eclipse.cdt.managedbuilder.core.GCCManagedMakePerProjectProfileC"/>
 		</scannerConfigBuildInfo>
 	</storageModule>
-	<storageModule moduleId="refreshScope"/>
+	<storageModule moduleId="refreshScope" versionNumber="1">
+		<resource resourceType="PROJECT" workspacePath="/KiskisAgent"/>
+	</storageModule>
 </cproject>
