Move nginx part to subutai-nginx

--- a/debian/control
+++ b/debian/control
@@ -35,9 +35,9 @@ Architecture: any
 Depends: cgmanager,
          gnupg1 | gnupg (< 2.0.0~),
          lxc,
-         nginx,
          nsexec,
          rng-tools,
+         subutai-nginx,
          subutai-ovs,
          subutai-p2p,
          zfsutils-linux,
