systemd: Restat=on-abnormal for non-prod instances

--- a/debian/subutai.service
+++ b/debian/subutai.service
@@ -6,6 +6,7 @@ Requires=cgmanager.service
 Type=simple
 ExecStart=/usr/bin/subutai daemon
 KillMode=process
+Restart=on-abnormal
 
 [Install]
 WantedBy=multi-user.target
