--- a/debian/rules
+++ b/debian/rules
@@ -23,11 +23,13 @@ override_dh_auto_install:
 	mv debian/subutai/usr/bin/agent debian/subutai/usr/bin/subutai
 	mkdir -p debian/subutai/etc/subutai/
 	mkdir -p debian/subutai/var/lib/subutai/
+	mkdir -p debian/subutai/usr/sbin
 	mkdir -p debian/subutai/usr/lib/subutai/libexec
 	mkdir -p debian/subutai/usr/share/bash-completion/completions
 	mkdir -p debian/subutai/lib/systemd/system
 	cp debian/tree/agent.conf debian/subutai/etc/subutai/
 	cp debian/tree/ssh.pem debian/subutai/var/lib/subutai/
+	cp debian/tree/sbin/* debian/subutai/usr/sbin/
 	cp debian/tree/libexec/* debian/subutai/usr/lib/subutai/libexec/
 	cp debian/tree/bash-completion/* debian/subutai/usr/share/bash-completion/completions/
 	cp debian/subutai-*.service debian/subutai/lib/systemd/system/
