--- a/debian/control
+++ b/debian/control
@@ -33,6 +33,7 @@ XS-Go-Import-Path: github.com/subutai-io/agent
 Package: subutai
 Architecture: any
 Depends: gnupg1 | gnupg (< 2.0.0~),
+         ipfs,
          lxc,
          nsexec,
          rng-tools,
