--- a/debian/tree/agent.conf
+++ b/debian/tree/agent.conf
@@ -7,6 +7,7 @@ DataPrefix = /var/lib/subutai/
 CacheDir = /var/cache/subutai
 GpgPassword = 12345678
 GpgHome =
+SshJumpServer = @sshJumpServer@
 
 [Management]
 Host =
@@ -23,6 +24,7 @@ User = root
 Pass = root
 
 [CDN]
+Apt = @aptHost@
 Allowinsecure = false
 URL = @cdnHost@
 SSLport = 443
