--- a/debian/control
+++ b/debian/control
@@ -18,6 +18,7 @@ Build-Depends: debhelper (>= 10),
                golang-github-tmc-scp-dev,
                golang-github-urfave-cli-dev,
                golang-github-wunderlist-ttlcache-dev,
+               golang-golang-x-net-dev (>= 1:0.0+git20180124.0ed95ab~),
                golang-gopkg-cheggaaa-pb.v1-dev,
                golang-gopkg-gcfg.v1-dev,
                golang-gopkg-lxc-go-lxc.v2-dev,
