--- a/debian/tree/agent.conf
+++ b/debian/tree/agent.conf
@@ -1,12 +1,12 @@
 [Agent]
 Debug = true
 GpgUser =
-LxcPrefix = /var/lib/lxc/
-Dataset = subutai/fs
-DataPrefix = /var/lib/subutai/
-CacheDir = /var/cache/subutai
 GpgPassword = 12345678
 GpgHome =
+DataPrefix = /var/lib/subutai/
+LxcPrefix = /var/lib/lxc/
+Dataset = subutai/fs
+CacheDir = /var/cache/subutai
 SshJumpServer = @sshJumpServer@
 
 [Management]
@@ -24,7 +24,9 @@ User = root
 Pass = root
 
 [CDN]
-Allowinsecure = false
 URL = @cdnHost@
 SSLport = 443
 IpfsPath = /var/lib/ipfs/node
+UseIpfs = false
+TemplateDownloadUrl = https://ipfs.subutai.io/ipfs/{ID}
+Allowinsecure = false
