--- a/debian/tree/agent.conf
+++ b/debian/tree/agent.conf
@@ -16,7 +16,7 @@ Secret = secret
 GpgUser =
 RestPublicKey = /rest/v1/security/keyman/getpublickeyring
 Fingerprint =
-Allowinsecure = true
+AllowInsecure = true
 
 [Influxdb]
 Db = metrics
@@ -25,8 +25,7 @@ Pass = root
 
 [CDN]
 URL = @cdnHost@
-SSLport = 443
+SslPort = 443
 IpfsPath = /var/lib/ipfs/node
-UseIpfs = false
 TemplateDownloadUrl = https://ipfs.subutai.io/ipfs/{ID}
-Allowinsecure = false
+AllowInsecure = false
