systemd: call cop on failure

--- a/debian/subutai-roaming.service
+++ b/debian/subutai-roaming.service
@@ -5,6 +5,7 @@ Requires=subutai-ovs.service
 [Service]
 Type=simple
 ExecStart=/usr/lib/subutai/libexec/roaming
+OnFailure=subutai-cop.service
 
 [Install]
 WantedBy=multi-user.target
