--- a/debian/subutai-rng.service
+++ b/debian/subutai-rng.service
@@ -6,6 +6,7 @@ After=rng-tools.service
 Type=forking
 ExecStart=/bin/bash -c "/bin/systemctl is-active --quiet rng-tools.service || /usr/sbin/rngd -r /dev/urandom"
 Restart=always
+OnFailure=subutai-cop.service
 
 [Install]
 WantedBy=multi-user.target
