--- a/debian/tree/agent.conf
+++ b/debian/tree/agent.conf
@@ -8,6 +8,7 @@ LxcPrefix = /var/lib/lxc/
 Dataset = subutai/fs
 CacheDir = /var/cache/subutai
 SshJumpServer = @sshJumpServer@
+LeStaging=@leStaging@
 
 [Management]
 Host =
